--- a/notebooks/Prototyping.ipynb
+++ b/notebooks/Prototyping.ipynb
@@ -42,7 +42,8 @@
     "import jax.numpy as jnp\n",
     "\n",
     "from joaquin.data import \n",
-    "from joaquin.features import default_phot_names as phot_names"
+    "from joaquin.features import default_phot_names as phot_names\n",
+    "from joaquin"
    ]
   },
   {
@@ -239,23 +240,6 @@
     "\n",
     "Optimizing the model"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import jax\n",
-    "from scipy.optimize import minimize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
