--- a/notebooks/Prototyping.ipynb
+++ b/notebooks/Prototyping.ipynb
@@ -41,9 +41,18 @@
     "import jax\n",
     "import jax.numpy as jnp\n",
     "\n",
-    "from joaquin.data import \n",
+    "from joaquin import Joaquin\n",
     "from joaquin.features import default_phot_names as phot_names\n",
-    "from joaquin"
+    "from joaquin.logger import logger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logger.setLevel(0)"
    ]
   },
   {
@@ -110,46 +119,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # for star in tqdm(stars[np.argsort(stars['H'])]):\n",
-    "\n",
-    "# X = None\n",
-    "# del_idx = []\n",
-    "# for i, star in enumerate(tqdm(stars)):\n",
-    "#     star_hdul = get_aspcapstar(star)\n",
-    "#     lsf_hdul = get_lsf(star)\n",
-    "    \n",
-    "#     lsf_f = get_lsf_features(lsf_hdul)\n",
-    "#     phot_f = get_phot_features(star)\n",
-    "#     try:\n",
-    "#         spec_f = get_spec_features(star_hdul)\n",
-    "#     except:\n",
-    "#         print(f\"failed for {i}\")\n",
-    "#         del_idx.append(i)\n",
-    "#         star_hdul.close()\n",
-    "#         lsf_hdul.close()\n",
-    "#         continue\n",
-    "    \n",
-    "#     if X is None:\n",
-    "#         X = np.full((len(stars), len(lsf_f) + len(phot_f) + len(spec_f)), \n",
-    "#                     np.nan)\n",
-    "        \n",
-    "#         lsf_idx = np.arange(len(lsf_f), dtype=int)\n",
-    "#         phot_idx = np.arange(len(lsf_f), len(lsf_f) + len(phot_f), dtype=int)\n",
-    "#         spec_idx = np.arange(len(lsf_f) + len(phot_f), X.shape[1], dtype=int)\n",
-    "        \n",
-    "#     X[i] = np.concatenate((lsf_f, phot_f, spec_f))\n",
-    "    \n",
-    "#     star_hdul.close()\n",
-    "#     lsf_hdul.close()\n",
-    "    \n",
-    "# #     plt.figure(figsize=(15, 5))\n",
-    "# #     plt.plot(star_hdul[1].data, marker='', drawstyle='steps-mid')\n",
-    "# #     plt.plot(star_hdul[2].data, marker='', drawstyle='steps-mid')\n",
-    "\n",
-    "# #     plt.figure(figsize=(15, 5))\n",
-    "# #     plt.plot(spec_f, marker='', drawstyle='steps-mid')\n",
-    "\n",
-    "# X = np.delete(X, del_idx, axis=0)"
+    "joa = Joaquin(stars, # terms=['phot'],\n",
+    "              frozen={'L2_ivar': 1e-1, \n",
+    "                      'parallax_zpt': -0.03})  # MAGIC NUMBER"
    ]
   },
   {
@@ -158,38 +130,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# y = stars['GAIAEDR3_PARALLAX']\n",
-    "# yerr = stars['GAIAEDR3_PARALLAX_ERROR']\n",
-    "# y = np.delete(y, del_idx)\n",
-    "# y_ivar = 1 / np.delete(yerr, del_idx)**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dm = DesignMatrix(stars)\n",
-    "# dm.get_sub_Xy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(dm.stars['GAIAEDR3_PARALLAX'], \n",
+    "plt.hist(joa.dm.stars['GAIAEDR3_PARALLAX'], \n",
     "         bins=np.linspace(-0.5, 2, 128));\n",
     "plt.yscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logger.handlers[0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: also color by mean fiber number, etc."
+    "TODO: also color by mean fiber number?"
    ]
   },
   {
@@ -198,15 +157,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = corner.corner(dm.get_sub_Xy(['lsf'])[0][dm.stars['TELESCOPE'] == 'apo25m'], \n",
-    "                    plot_density=False, plot_contours=False, color='tab:blue')\n",
-    "_ = corner.corner(dm.get_sub_Xy(['lsf'])[0][dm.stars['TELESCOPE'] == 'lco25m'], \n",
-    "                  plot_density=False, plot_contours=False, color='tab:orange', fig=fig)\n",
+    "fig = corner.corner(joa.dm.get_sub_Xy(['lsf'])[0][joa.dm.stars['TELESCOPE'] == 'apo25m'], \n",
+    "                    plot_density=False, plot_contours=False, color='tab:blue',\n",
+    "                    labels=[r'$a_{\\rm b}$', r'$b_{\\rm b}$', \n",
+    "                            r'$a_{\\rm g}$', r'$b_{\\rm g}$',\n",
+    "                            r'$a_{\\rm r}$', r'$b_{\\rm r}$'],\n",
+    "                    hist_kwargs=dict(label='APO'))\n",
+    "_ = corner.corner(joa.dm.get_sub_Xy(['lsf'])[0][joa.dm.stars['TELESCOPE'] == 'lco25m'], \n",
+    "                  plot_density=False, plot_contours=False, color='tab:orange', \n",
+    "                  fig=fig, hist_kwargs=dict(label='LCO'))\n",
     "\n",
     "for ax in fig.axes:\n",
     "    ax.relim()\n",
     "    ax.autoscale()\n",
-    "    \n",
+    "\n",
+    "fig.axes[0].legend(loc='upper left')\n",
+    "\n",
     "fig.set_facecolor('w')"
    ]
   },
@@ -216,20 +182,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors = [\n",
-    "    ('GAIAEDR3_PHOT_G_MEAN_MAG', 'J'),\n",
-    "    ('GAIAEDR3_PHOT_BP_MEAN_MAG', 'GAIAEDR3_PHOT_RP_MEAN_MAG'),\n",
-    "    ('J', 'K'),\n",
-    "    ('w1mpro', 'w2mpro'),\n",
-    "    ('w3mpro', 'w4mpro')\n",
-    "]\n",
+    "# colors = [\n",
+    "#     ('GAIAEDR3_PHOT_G_MEAN_MAG', 'J'),\n",
+    "#     ('GAIAEDR3_PHOT_BP_MEAN_MAG', 'GAIAEDR3_PHOT_RP_MEAN_MAG'),\n",
+    "#     ('J', 'K'),\n",
+    "#     ('w1mpro', 'w2mpro'),\n",
+    "#     ('w3mpro', 'w4mpro')\n",
+    "# ]\n",
     "\n",
-    "color_X = np.zeros((X.shape[0], len(colors)))\n",
-    "for i, (p1, p2) in enumerate(colors):\n",
-    "    color_X[:, i] = (X[:, phot_idx[phot_names.index(p1)]] -\n",
-    "                     X[:, phot_idx[phot_names.index(p2)]])\n",
+    "# color_X = np.zeros((joa.X.shape[0], len(colors)))\n",
+    "# for i, (p1, p2) in enumerate(colors):\n",
+    "#     color_X[:, i] = (joa.X[:, phot_idx[phot_names.index(p1)]] -\n",
+    "#                      joa.X[:, phot_idx[phot_names.index(p2)]])\n",
     "    \n",
-    "_ = corner.corner(color_X, plot_density=False, plot_contours=False)"
+    "# _ = corner.corner(color_X, plot_density=False, plot_contours=False)"
    ]
   },
   {
@@ -247,9 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joa = Joaquin(*dm.get_sub_Xy(), \n",
-    "              L2_slice=dm.idx_map['spec'],\n",
-    "              frozen={'L2_ivar': 1e-1, 'parallax_zpt': -0.03})  # MAGIC NUMBER"
+    "init_beta = joa.init_beta()"
    ]
   },
   {
@@ -258,16 +222,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "beta = joa.init_beta()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = joa.optimize()"
+    "res = joa.optimize(options={'maxfun': 1000})\n",
+    "# res, wrapper, ps = joa.optimize()"
    ]
   },
   {
@@ -294,9 +250,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(15, 3))\n",
-    "plt.plot(fit_pars['beta'][dm.idx_map['spec']])\n",
-    "# plt.xlim(100, 1500)"
+    "plt.figure(figsize=(15, 4))\n",
+    "plt.plot(init_beta[joa.dm.idx_map['spec']] - fit_pars['beta'][joa.dm.idx_map['spec']])\n",
+    "# plt.xlim(2000, 2500)\n",
+    "plt.ylabel('init beta - fit beta')"
    ]
   },
   {
@@ -305,9 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# beta = fit_pars['beta']\n",
-    "beta = joa.init_beta(L2_ivar=1e2)\n",
-    "pred_plx = np.exp(np.dot(dm._X, beta))"
+    "pred_plx = np.exp(np.dot(joa.X, fit_pars['beta']))"
    ]
   },
   {
@@ -317,10 +272,39 @@
    "outputs": [],
    "source": [
     "bins = np.linspace(-0.5, 2, 128)\n",
-    "plt.hist(dm.stars['GAIAEDR3_PARALLAX'], \n",
+    "plt.hist(joa.dm.stars['GAIAEDR3_PARALLAX'], \n",
     "         bins=bins);\n",
     "plt.hist(pred_plx, bins=bins)\n",
     "plt.yscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "\n",
+    "ax = axes[0]\n",
+    "ax.plot(joa.dm.stars['GAIAEDR3_PARALLAX'], \n",
+    "        pred_plx,\n",
+    "        marker='o', ls='none', mew=0, ms=1, alpha=0.75)\n",
+    "ax.set_xlim(-0.5, 1.5)\n",
+    "ax.set_ylim(ax.get_xlim())\n",
+    "ax.set_xlabel('Gaia plx')\n",
+    "ax.set_ylabel('Joaquin plx')\n",
+    "\n",
+    "ax = axes[1]\n",
+    "ax.plot(joa.dm.stars['GAIAEDR3_PARALLAX'], \n",
+    "        joa.chi(**fit_pars),\n",
+    "        marker='o', ls='none', mew=0, ms=1, alpha=0.75)\n",
+    "ax.set_xlim(-0.5, 1.5)\n",
+    "# ax.set_ylim(ax.get_xlim())\n",
+    "ax.set_xlabel('Gaia plx')\n",
+    "ax.set_ylabel(r'$\\chi$')\n",
+    "\n",
+    "fig.tight_layout()"
    ]
   },
   {
