--- a/notebooks/Prototyping.ipynb
+++ b/notebooks/Prototyping.ipynb
@@ -43,16 +43,9 @@
     "\n",
     "from joaquin import Joaquin\n",
     "from joaquin.features import default_phot_names as phot_names\n",
-    "from joaquin.logger import logger"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logger.setLevel(0)"
+    "from joaquin.logger import logger\n",
+    "\n",
+    "from gala.mpl_style import hesperia, laguna"
    ]
   },
   {
@@ -109,7 +102,7 @@
     "                (allstar['TEFF'] < 5000) &\n",
     "                (allstar['SNR'] > 100) &\n",
     "                np.isin(allstar['TELESCOPE'], ['apo25m', 'lco25m']) & \n",
-    "                phot_mask][::10]\n",
+    "                phot_mask]\n",
     "len(stars)"
    ]
   },
@@ -136,19 +129,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logger.handlers[0]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: also color by mean fiber number?"
+    "TODO: also color by mean fiber number? MEANFIB"
    ]
   },
   {
@@ -157,45 +141,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = corner.corner(joa.dm.get_sub_Xy(['lsf'])[0][joa.dm.stars['TELESCOPE'] == 'apo25m'], \n",
-    "                    plot_density=False, plot_contours=False, color='tab:blue',\n",
-    "                    labels=[r'$a_{\\rm b}$', r'$b_{\\rm b}$', \n",
-    "                            r'$a_{\\rm g}$', r'$b_{\\rm g}$',\n",
-    "                            r'$a_{\\rm r}$', r'$b_{\\rm r}$'],\n",
-    "                    hist_kwargs=dict(label='APO'))\n",
-    "_ = corner.corner(joa.dm.get_sub_Xy(['lsf'])[0][joa.dm.stars['TELESCOPE'] == 'lco25m'], \n",
-    "                  plot_density=False, plot_contours=False, color='tab:orange', \n",
-    "                  fig=fig, hist_kwargs=dict(label='LCO'))\n",
-    "\n",
-    "for ax in fig.axes:\n",
-    "    ax.relim()\n",
-    "    ax.autoscale()\n",
-    "\n",
-    "fig.axes[0].legend(loc='upper left')\n",
-    "\n",
-    "fig.set_facecolor('w')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# colors = [\n",
-    "#     ('GAIAEDR3_PHOT_G_MEAN_MAG', 'J'),\n",
-    "#     ('GAIAEDR3_PHOT_BP_MEAN_MAG', 'GAIAEDR3_PHOT_RP_MEAN_MAG'),\n",
-    "#     ('J', 'K'),\n",
-    "#     ('w1mpro', 'w2mpro'),\n",
-    "#     ('w3mpro', 'w4mpro')\n",
-    "# ]\n",
-    "\n",
-    "# color_X = np.zeros((joa.X.shape[0], len(colors)))\n",
-    "# for i, (p1, p2) in enumerate(colors):\n",
-    "#     color_X[:, i] = (joa.X[:, phot_idx[phot_names.index(p1)]] -\n",
-    "#                      joa.X[:, phot_idx[phot_names.index(p2)]])\n",
+    "def simple_corner(X, labels=None, color_by=None, axes=None, \n",
+    "                  colorbar=False, **style):\n",
+    "    if X.shape[1] > X.shape[0]:\n",
+    "        raise ValueError(\"I don't believe you\")\n",
+    "        \n",
+    "    if color_by is None:\n",
+    "        plotfunc = 'plot'\n",
+    "        style.setdefault('marker', 'o')\n",
+    "        style.setdefault('mew', style.pop('markeredgewidth', 0))\n",
+    "        style.setdefault('ls', style.pop('linestyle', 'none'))\n",
+    "        style.setdefault('ms', style.pop('markersize', 2.))\n",
+    "    else:\n",
+    "        plotfunc = 'scatter'\n",
+    "        style.setdefault('marker', 'o')\n",
+    "        style.setdefault('lw', style.pop('linewidth', 0))\n",
+    "        style.setdefault('s', 5)\n",
+    "        style.setdefault('c', color_by)\n",
+    "        \n",
+    "    nside = X.shape[1] - 1\n",
     "    \n",
-    "# _ = corner.corner(color_X, plot_density=False, plot_contours=False)"
+    "    # Some magic numbers for pretty axis layout.\n",
+    "    K = X.shape[1]\n",
+    "    factor = 2.0  # size of one side of one panel\n",
+    "    lbdim = 0.5 * factor  # size of left/bottom margin\n",
+    "    trdim = 0.2 * factor  # size of top/right margin\n",
+    "    whspace = 0.05  # w/hspace size\n",
+    "    plotdim = factor * K + factor * (K - 1.0) * whspace\n",
+    "    dim = lbdim + plotdim + trdim\n",
+    "    \n",
+    "    if axes is None:\n",
+    "        fig, axes = plt.subplots(nside, nside, \n",
+    "                                 figsize=(dim, dim), # (3*nside, 3*nside),\n",
+    "                                 sharex='col', sharey='row',\n",
+    "                                 constrained_layout=True)\n",
+    "    else:\n",
+    "        fig = axes.flat[0].figure\n",
+    "        \n",
+    "    if not isinstance(axes, np.ndarray):\n",
+    "        axes = np.array([[axes]])\n",
+    "    \n",
+    "    n = 0\n",
+    "    cs = None\n",
+    "    for i in range(nside):\n",
+    "        for j in range(nside):\n",
+    "            ax = axes[i, j]\n",
+    "            if i < j:\n",
+    "                ax.set_visible(False)\n",
+    "            else:\n",
+    "                cs = getattr(ax, plotfunc)(X[:, j], X[:, i+1], **style)\n",
+    "    \n",
+    "    if labels is not None:\n",
+    "        for i in range(nside):\n",
+    "            axes[i, 0].set_ylabel(labels[i+1])\n",
+    "\n",
+    "        for j in range(nside):\n",
+    "            axes[-1, j].set_xlabel(labels[j])\n",
+    "    \n",
+    "    return_stuff = [fig, axes]\n",
+    "    \n",
+    "    if colorbar and color_by is not None and cs is not None:\n",
+    "        cb = fig.colorbar(cs, ax=axes)\n",
+    "        return_stuff.append(cb)\n",
+    "    \n",
+    "    return return_stuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "axes = None\n",
+    "for tele in ['apo25m', 'lco25m']:\n",
+    "    mask = joa.dm.stars['TELESCOPE'] == tele\n",
+    "    \n",
+    "    if axes is None:\n",
+    "        fig, axes = simple_corner(joa.dm.get_Xy(['lsf'])[0][mask], \n",
+    "                                  color_by=joa.dm.stars['MEANFIB'][mask],\n",
+    "                                  alpha=0.75, cmap=hesperia, \n",
+    "                                  labels=[r'$a_{\\rm b}$', r'$b_{\\rm b}$', \n",
+    "                                          r'$a_{\\rm g}$', r'$b_{\\rm g}$',\n",
+    "                                          r'$a_{\\rm r}$', r'$b_{\\rm r}$'])\n",
+    "    else:\n",
+    "        fig, axes = simple_corner(joa.dm.get_Xy(['lsf'])[0][mask], \n",
+    "                                  color_by=joa.dm.stars['MEANFIB'][mask],\n",
+    "                                  alpha=0.75, cmap=laguna, axes=axes)\n",
+    "        \n",
+    "fig.set_facecolor('w')"
    ]
   },
   {
@@ -222,7 +256,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = joa.optimize(options={'maxfun': 1000})\n",
+    "plt.figure(figsize=(15, 4))\n",
+    "plt.plot(init_beta)\n",
+    "plt.ylabel('init beta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = joa.optimize(options={'maxfun': 10_000})\n",
     "# res, wrapper, ps = joa.optimize()"
    ]
   },
@@ -251,9 +296,14 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(15, 4))\n",
-    "plt.plot(init_beta[joa.dm.idx_map['spec']] - fit_pars['beta'][joa.dm.idx_map['spec']])\n",
-    "# plt.xlim(2000, 2500)\n",
-    "plt.ylabel('init beta - fit beta')"
+    "plt.plot(init_beta[joa.idx_map['spec']] - fit_pars['beta'][joa.idx_map['spec']])\n",
+    "plt.ylabel('init beta - fit beta')\n",
+    "\n",
+    "plt.figure(figsize=(15, 4))\n",
+    "plt.plot(init_beta[joa.idx_map['spec']], label='init')\n",
+    "plt.plot(fit_pars['beta'][joa.idx_map['spec']], label='fit')\n",
+    "plt.ylabel('beta')\n",
+    "plt.legend(loc='best')"
    ]
   },
   {
@@ -284,12 +334,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "chi = joa.chi(**fit_pars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig, axes = plt.subplots(1, 2, figsize=(10, 5))\n",
     "\n",
     "ax = axes[0]\n",
     "ax.plot(joa.dm.stars['GAIAEDR3_PARALLAX'], \n",
     "        pred_plx,\n",
-    "        marker='o', ls='none', mew=0, ms=1, alpha=0.75)\n",
+    "        marker='o', ls='none', mew=0, ms=1.5, alpha=0.75)\n",
     "ax.set_xlim(-0.5, 1.5)\n",
     "ax.set_ylim(ax.get_xlim())\n",
     "ax.set_xlabel('Gaia plx')\n",
@@ -297,8 +356,8 @@
     "\n",
     "ax = axes[1]\n",
     "ax.plot(joa.dm.stars['GAIAEDR3_PARALLAX'], \n",
-    "        joa.chi(**fit_pars),\n",
-    "        marker='o', ls='none', mew=0, ms=1, alpha=0.75)\n",
+    "        chi,\n",
+    "        marker='o', ls='none', mew=0, ms=1.5, alpha=0.75)\n",
     "ax.set_xlim(-0.5, 1.5)\n",
     "# ax.set_ylim(ax.get_xlim())\n",
     "ax.set_xlabel('Gaia plx')\n",
@@ -306,6 +365,149 @@
     "\n",
     "fig.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "\n",
+    "ax = axes[0]\n",
+    "ax.scatter(joa.dm.stars['GAIAEDR3_PARALLAX'], \n",
+    "           pred_plx,\n",
+    "           c=np.log(joa.dm.stars['VSCATTER']), \n",
+    "           vmin=-1, vmax=4, cmap='turbo',\n",
+    "           marker='o', lw=0, s=10, alpha=0.75)\n",
+    "\n",
+    "ax.errorbar(joa.dm.stars['GAIAEDR3_PARALLAX'], \n",
+    "            pred_plx,\n",
+    "            xerr=joa.dm.stars['GAIAEDR3_PARALLAX_ERROR'],\n",
+    "            marker='', ls='', ecolor='#666666', \n",
+    "            elinewidth=0.5, alpha=0.5)\n",
+    "\n",
+    "ax.set_xlim(-0.5, 1.5)\n",
+    "ax.set_ylim(ax.get_xlim())\n",
+    "ax.set_xlabel('Gaia plx')\n",
+    "ax.set_ylabel('Joaquin plx')\n",
+    "\n",
+    "ax = axes[1]\n",
+    "ax.scatter(joa.dm.stars['GAIAEDR3_PARALLAX'], \n",
+    "           chi,\n",
+    "           c=np.log(joa.dm.stars['VSCATTER']), \n",
+    "           vmin=-1, vmax=4, cmap='turbo',\n",
+    "           marker='o', lw=0, s=10, alpha=0.75)\n",
+    "ax.set_xlim(-0.5, 1.5)\n",
+    "# ax.set_ylim(ax.get_xlim())\n",
+    "ax.set_xlabel('Gaia plx')\n",
+    "ax.set_ylabel(r'$\\chi$')\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "fig.set_facecolor('w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phot_to_label = {\n",
+    "    'GAIAEDR3_PHOT_BP_MEAN_MAG': 'BP',\n",
+    "    'GAIAEDR3_PHOT_RP_MEAN_MAG': 'RP',\n",
+    "    'GAIAEDR3_PHOT_G_MEAN_MAG': 'G',\n",
+    "    'w1mpro': 'W1',\n",
+    "    'w2mpro': 'W2',\n",
+    "    'w3mpro': 'W3',\n",
+    "    'w3mpro': 'W4',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Photometry / colors:\n",
+    "plot_X = []\n",
+    "labels = []\n",
+    "\n",
+    "colors = [\n",
+    "    ('GAIAEDR3_PHOT_BP_MEAN_MAG', 'GAIAEDR3_PHOT_RP_MEAN_MAG'),\n",
+    "    ('J', 'K'),\n",
+    "    ('w1mpro', 'w3mpro'),\n",
+    "    ('GAIAEDR3_PHOT_G_MEAN_MAG', 'J'),\n",
+    "    ('H', 'w2mpro')\n",
+    "]\n",
+    "for i, (p1, p2) in enumerate(colors):\n",
+    "    vals = (joa.X[:, joa.idx_map['phot'][phot_names.index(p1)]] -\n",
+    "            joa.X[:, joa.idx_map['phot'][phot_names.index(p2)]])\n",
+    "    plot_X.append(vals)\n",
+    "    \n",
+    "    lbl1 = p1\n",
+    "    if p1 in phot_to_label:\n",
+    "        lbl1 = phot_to_label[p1]\n",
+    "    \n",
+    "    lbl2 = p2\n",
+    "    if p2 in phot_to_label:\n",
+    "        lbl2 = phot_to_label[p2]\n",
+    "    \n",
+    "    lbl = f\"{lbl1} $-$ {lbl2}\"\n",
+    "    labels.append(lbl)\n",
+    "    \n",
+    "plot_X = np.array(plot_X).T\n",
+    "\n",
+    "fig, axes, cb = simple_corner(\n",
+    "    plot_X, \n",
+    "    color_by=chi,\n",
+    "    colorbar=True,\n",
+    "    labels=labels,\n",
+    "    vmin=-4, vmax=4, s=8,\n",
+    "    alpha=0.75, cmap='RdBu')\n",
+    "cb.ax.set_aspect(40)\n",
+    "\n",
+    "fig.set_facecolor('w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Housekeeping:\n",
+    "plot_X = joa.X[:, joa.idx_map['lsf']]\n",
+    "labels = [r'$a_{\\rm b}$', r'$b_{\\rm b}$', \n",
+    "          r'$a_{\\rm g}$', r'$b_{\\rm g}$',\n",
+    "          r'$a_{\\rm r}$', r'$b_{\\rm r}$']\n",
+    "\n",
+    "fig, axes, cb = simple_corner(\n",
+    "    plot_X, \n",
+    "    color_by=chi,\n",
+    "    colorbar=True,\n",
+    "    labels=labels,\n",
+    "    vmin=-4, vmax=4, s=8,\n",
+    "    alpha=0.75, cmap='RdBu')\n",
+    "cb.ax.set_aspect(40)\n",
+    "\n",
+    "fig.set_facecolor('w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -463,6 +665,29 @@
    "source": [
     "### Old plots:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.where(all_spec_mask)[0].size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
