nb to define parent sample

--- a/notebooks/Parent-sample-cleaning.ipynb
+++ b/notebooks/Parent-sample-cleaning.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Need to download all aspcapStar files for N/S (use --dry-run first):\n",
+    "\n",
+    "    rsync -aLvz --include \"*/\" \\\n",
+    "    --include \"aspcapStar*.fits\" --exclude \"*\" \\\n",
+    "    --prune-empty-dirs --progress \\\n",
+    "    rsync://dtn.sdss.org/dr16/apogee/spectro/aspcap/r12/l33/apo25m/ apo25m/\n",
+    "    \n",
+    "And same for the apStarLSF files:\n",
+    "\n",
+    "    rsync -aLvz --include \"*/\" \\\n",
+    "    --include \"apStarLSF*.fits\" --exclude \"*\" \\\n",
+    "    --prune-empty-dirs --progress \\\n",
+    "    rsync://dtn.sdss.org/dr16/apogee/spectro/redux/r12/stars/apo25m/ apo25m/\n",
+    "    \n",
+    "    rsync -aLvz --include \"*/\" \\\n",
+    "    --include \"asStarLSF*.fits\" --exclude \"*\" \\\n",
+    "    --prune-empty-dirs --progress \\\n",
+    "    rsync://dtn.sdss.org/dr16/apogee/spectro/redux/r12/stars/lco25m/ lco25m/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -9,6 +33,7 @@
     "import os\n",
     "os.environ['APOGEE_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/apogee-test/\"\n",
     "\n",
+    "import re\n",
     "import sys\n",
     "import pathlib\n",
     "_path = str(pathlib.Path('../').resolve())\n",
@@ -31,8 +56,18 @@
     "from gala.mpl_style import hesperia, laguna\n",
     "\n",
     "from joaquin.data_helpers import get_parent_sample, phot_to_label\n",
-    "from joaquin.config import phot_names\n",
+    "from joaquin.config import phot_names, dr\n",
     "from joaquin.plot import simple_corner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache_path = pathlib.Path(f'../cache/{dr}').resolve()\n",
+    "cache_path.mkdir(exist_ok=True, parents=True)"
    ]
   },
   {
@@ -94,6 +129,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for band in 'JHK':\n",
+    "    print(np.percentile(stars[f'{band}_ERR'][phot_mask], [1, 99.9]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "phot_mask = np.isin(stars['TELESCOPE'], ['apo25m', 'lco25m'])\n",
     "\n",
     "phot_mask = np.ones(len(stars), dtype=bool)\n",
@@ -102,13 +147,16 @@
     "                  (stars[name] > 0) &\n",
     "                  (stars[name] < 22))  # MAGIC NUMBER\n",
     "\n",
-    "# TODO: this assumes 2MASS photometry is in there...\n",
+    "# 2MASS photometry\n",
     "for band in ['J', 'H', 'K']:\n",
     "    phot_mask &= ((stars[f'{band}_ERR'] > 0) &\n",
-    "                  (stars[f'{band}_ERR'] < 0.1))\n",
+    "                  (stars[f'{band}_ERR'] < 0.1))  # MAGIC NUMBER\n",
     "\n",
-    "# TODO: this assumes WISE photometry is in there...\n",
-    "phot_mask &= np.char.startswith(stars['ph_qual'].astype(str), 'AA')"
+    "# WISE photometry\n",
+    "# phot_mask &= np.char.startswith(stars['ph_qual'].astype(str), 'AA')\n",
+    "pattr = re.compile(\"^([AB][AB])\")\n",
+    "phot_mask &= np.array([re.search(pattr, x) is not None\n",
+    "                       for x in stars['ph_qual'].filled('--').astype(str)])"
    ]
   },
   {
@@ -117,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binaries_mask = ~np.isin(stars['APOGEE_ID'], binaries['APOGEE_ID'])"
+    "# binaries_mask = ~np.isin(stars['APOGEE_ID'], binaries['APOGEE_ID'])"
    ]
   },
   {
@@ -126,16 +174,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "snr_mask = (stars['SNR'] > 40)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clean_stars = stars[phot_mask & snr_mask]  # & binaries_mask\n",
+    "# TODO: mask binaries?\n",
+    "clean_stars = stars[phot_mask]  # & binaries_mask\n",
     "len(stars), len(clean_stars)"
    ]
   },
@@ -166,8 +206,10 @@
     "           c=clean_stars['J'],\n",
     "           marker='o', alpha=0.4, lw=0, s=4, \n",
     "           cmap='cividis_r')\n",
+    "ax.set_xlabel('$G-J$')\n",
+    "ax.set_ylabel('$J-K$')\n",
     "\n",
-    "ax = axes[1]\n",
+    "ax = axes[2]\n",
     "dcolor = J_K - poly(G_J)\n",
     "ax.scatter(clean_stars['J'], \n",
     "           dcolor, \n",
@@ -184,11 +226,18 @@
     "                            statistic=lambda x: 1.5 * MAD(x),\n",
     "                            bins=bins)\n",
     "\n",
-    "ax = axes[2]\n",
+    "ax.set_xlabel('$J$')\n",
+    "ax.set_ylabel(r'$(J-K) - (J-K)_{\\rm pred}$')\n",
+    "\n",
+    "ax = axes[1]\n",
     "ax.scatter(G_J, dcolor, \n",
-    "           c=clean_stars['J'],\n",
+    "           c=clean_stars['LOGG'],\n",
+    "           vmin=0.5, vmax=5.5,\n",
     "           marker='o', alpha=0.4, lw=0, s=4,\n",
     "           cmap='cividis_r')\n",
+    "\n",
+    "ax.set_xlabel('$G - J$')\n",
+    "ax.set_ylabel(r'$(J-K) - (J-K)_{\\rm pred}$')\n",
     "\n",
     "# MAGIC NUMBERS\n",
     "ax.axhline(np.median(dcolor) - 6 * np.std(dcolor))\n",
@@ -196,7 +245,8 @@
     "# ax.axhline(np.median(dcolor) - 8 * 1.5 * MAD(dcolor), color='tab:green')\n",
     "# ax.axhline(np.median(dcolor) + 8 * 1.5 * MAD(dcolor), color='tab:green')\n",
     "\n",
-    "fig.tight_layout()"
+    "fig.tight_layout()\n",
+    "fig.set_facecolor('w')"
    ]
   },
   {
@@ -205,10 +255,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# MAGIC NUMBER: Good ol' standard 6 sigma cut\n",
     "dcolor_mask = np.abs(dcolor - np.median(dcolor)) < 6 * np.std(dcolor)\n",
     "dcolor_mask &= (clean_stars['H'] - clean_stars['w2mpro']) > -0.5\n",
     "dcolor_mask &= (clean_stars['w1mpro'] - clean_stars['w2mpro']) > -1\n",
     "dcolor_mask.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent = clean_stars[dcolor_mask]"
    ]
   },
   {
@@ -229,7 +289,7 @@
     "    ('H', 'w2mpro')\n",
     "]\n",
     "for i, (p1, p2) in enumerate(colors):\n",
-    "    vals = (clean_stars[p1] - clean_stars[p2])[dcolor_mask]\n",
+    "    vals = parent[p1] - parent[p2]\n",
     "    plot_X.append(vals)\n",
     "    \n",
     "    lbl1 = p1\n",
@@ -256,7 +316,7 @@
     "    plot_X, \n",
     "    colorbar=True,\n",
     "    labels=labels,\n",
-    "    alpha=0.75)\n",
+    "    alpha=0.2, ms=1.)\n",
     "\n",
     "fig.set_facecolor('w')"
    ]
@@ -267,27 +327,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G_J = clean_stars['GAIAEDR3_PHOT_G_MEAN_MAG'] - clean_stars['J']\n",
-    "H_W2 = clean_stars['H'] - clean_stars['w2mpro']\n",
-    "\n",
-    "err1 = clean_stars['J_ERR']\n",
-    "err2 = np.sqrt(clean_stars['H_ERR']**2 + clean_stars['w2mpro_error']**2)\n",
-    "\n",
-    "fig, ax = plt.subplots(1, 1, figsize=(7, 6))\n",
-    "\n",
-    "cs = ax.scatter(G_J[dcolor_mask], H_W2[dcolor_mask], \n",
-    "                c=clean_stars['SFD_EBV'][dcolor_mask],\n",
-    "                vmin=0, vmax=0.3,\n",
-    "                marker='o', alpha=0.4, lw=0, s=8, \n",
-    "                cmap='cividis_r', zorder=100)\n",
-    "# ax.errorbar(G_J, H_W2, \n",
-    "#             xerr=err1, yerr=err2,\n",
-    "#             marker='', ls='none', color='#666666', \n",
-    "#             alpha=0.5, elinewidth=0.5,)\n",
-    "\n",
-    "fig.colorbar(cs)\n",
-    "\n",
-    "fig.tight_layout()"
+    "fig, *_, cb = simple_corner(\n",
+    "    plot_X, \n",
+    "    labels=labels,\n",
+    "    alpha=0.2, \n",
+    "    color_by=parent['LOGG'],\n",
+    "    vmin=0.5, vmax=5., cmap='turbo',\n",
+    "    colorbar=True)\n",
+    "fig.set_facecolor('w')\n",
+    "cb.set_label(r'$\\log g$')\n",
+    "cb.ax.set_aspect(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, *_, cb = simple_corner(\n",
+    "    plot_X, \n",
+    "    labels=labels,\n",
+    "    alpha=0.2, \n",
+    "    color_by=np.log10(parent['SFD_EBV']),\n",
+    "    vmin=-1, vmax=0, cmap='turbo',\n",
+    "    colorbar=True)\n",
+    "fig.set_facecolor('w')\n",
+    "cb.set_label(r'$\\log_{10} ({\\rm SFD EBV})$')\n",
+    "cb.ax.set_aspect(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(allstar), len(clean_stars), len(parent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent.write(cache_path / 'parent-sample.fits', overwrite=True)"
    ]
   },
   {
